refactor(poll-manager): Refactor API design and models (#1)
Having a body on a DELETE request is bad practice. Didn't discover that until in production where Cloudflare strips the body from the request. API needed to be refactored, so decided to use multiple PATCH requests instead.
